--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 background-color: teal;
             }
         </style>
-        <script type="text/javascript" src="d3/d3.v3.min.js"></script>
+        <script type="text/javascript" src="d3.v7.min.js"></script>
     </head>
     <body>
         <div>
@@ -21,67 +21,7 @@
 
         <svg id="shapes"></svg>
 
-        <script type="text/javascript">
-        const shapes = d3.select("#shapes");
-        
-        var margin = {top: 50, right: 50, bottom: 50, left: 50},
-            width = 600 - margin.left - margin.right,
-            height = 600 - margin.top - margin.bottom;
-
-        const graph = (
-            shapes.attr("width", width + margin.left + margin.right)
-                .attr("height", height + margin.top + margin.bottom)
-            .append("g")
-                .attr("class", "graph")
-                .attr("transform", "translate(" + margin.left + "," + margin.top + ") scale(5)  ")
-        );
-
-        var posX = [];
-        var posY = [];
-        var size = [];
-        for (var i = 0; i < 50; i++) {
-            let xRand = Math.random();
-            posX.push(Math.round(xRand * 100)); // tested: reaches 0-100 inclusive
-            posY.push(Math.round(Math.random() * 100));
-            size.push(Math.round(5 + xRand * 45));
-        }
-        console.log(`axis domains are as follows\nx: (${d3.min(posX)}, ${d3.max(posX)}) y: (${d3.min(posY)}, ${d3.max(posY)})`);
-
-        var x = d3.scale.linear()
-            .domain([d3.min(posX),d3.max(posX)])
-            .range([0, width]);
-
-        var y = d3.scale.linear()
-            .domain([d3.min(posY),d3.max(posY)])
-            .range([height, 0]);    
-
-        var xAxis = d3.svg.axis()
-            .ticks(10)
-            .scale(x);
-
-        var yAxis = d3.svg.axis()
-            .scale(y)
-            .ticks(10)
-            .orient("left");
-
-        for (var i = 0; i < 50; i++) {
-            graph.append("path")
-                  .attr("d", d3.svg.symbol().type(i < 25 ? "circle" : "triangle-up").size(size[i]))
-                  .attr("fill", "none")
-                  .attr("stroke", (size[i] > d3.mean(size) ? "blue" : "green"))
-                  .attr("transform", "translate("+posX[i]+","+posY[i]+")");
-        }
-
-        shapes.append("g")
-            .attr("class", "x axis")
-            .attr("transform", "translate(" + margin.left + "," + (height + margin.top) + ")")
-            .call(xAxis);
-
-        shapes.append("g")
-            .attr("class", "y axis")
-            .attr("transform", "translate(" + margin.left + "," + margin.top + ")")
-            .call(yAxis);
-        
-        </script>
+        <script type="text/javascript" src="data.js"></script>
+        <script type="text/javascript" src="coreJs.js"></script>
     </body>
 </html>
